<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="click"
            type="com.pjw.noteutils.CalllogActivity.ClickProxy" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8EBF1"
    tools:context=".CalllogActivity">

    <TextView
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#346C9C"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/back"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="@id/bar"
        app:layout_constraintTop_toTopOf="@id/bar"
        app:layout_constraintBottom_toBottomOf="@id/bar"
        tools:ignore="ContentDescription"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/home_nums_title"
        app:layout_constraintBottom_toBottomOf="@id/bar"
        app:layout_constraintTop_toTopOf="@id/bar"
        app:layout_constraintStart_toStartOf="@id/bar"
        app:layout_constraintEnd_toEndOf="@id/bar"/>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/home_times"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar"/>

    <EditText
        android:id="@+id/edtTimes"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:inputType="number"
        android:autofillHints=""
        android:layout_marginEnd="25dp"
        android:background="@drawable/white_bg"
        android:hint="@string/home_times_tips"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@id/tv1"
        app:layout_constraintBottom_toBottomOf="@id/tv1"
        app:layout_constraintStart_toEndOf="@id/tv1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/home_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1"/>

    <EditText
        android:id="@+id/edtNum"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="20dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:autofillHints=""
        android:background="@drawable/white_bg"
        android:hint="@string/home_number_tips"
        app:layout_constraintTop_toTopOf="@id/tv2"
        app:layout_constraintStart_toEndOf="@id/tv2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="#346C9C"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        android:onClick="@{() -> click.createRandom()}"
        android:text="@string/home_random_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn2"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="#346C9C"
        android:text="@string/home_nums_create"
        android:textColor="#FFFFFF"
        android:onClick="@{() -> click.createNums()}"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/btn1"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>